--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+# App info
 spring.application.name=eureka-server
 server.port=8761
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.region=localhost
+
+# Eureka server-specific configuration
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.client.region=default
+
+# Security
+spring.security.user.name=eurekauser
+spring.security.user.password=eurekapassword
