--- a/spring-boot-main/build.gradle
+++ b/spring-boot-main/build.gradle
@@ -2,10 +2,25 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.10'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.google.cloud.tools.jib' version '3.4.0'
 }
 
 group = 'com.epam.training'
 version = '0.0.1-SNAPSHOT'
+
+jib {
+    from {
+        image = 'eclipse-temurin:17-jre' // Or 21 if you're on Java 21
+    }
+    to {
+        image = 'ibragimovanvar/training-service:latest' // Or local repo
+    }
+    container {
+        jvmFlags = ['-Dspring.profiles.active=docker']
+        ports = ['8082']
+        mainClass = project.hasProperty('mainClassName') ? project.property('mainClassName') : 'com.epam.training.spring_boot_epam.SpringBootEpamApplication'
+    }
+}
 
 java {
     toolchain {
@@ -34,19 +49,19 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation("org.springframework.cloud:spring-cloud-starter-openfeign")
     implementation("org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j")
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     implementation 'io.github.resilience4j:resilience4j-core:2.2.0'
     implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
 
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-    testImplementation group: 'org.springframework.security', name: 'spring-security-test'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
@@ -61,13 +76,13 @@ dependencies {
     implementation group: 'org.mapstruct', name: 'mapstruct', version: mapstructVersion
     annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: mapstructVersion
 
-    compileOnly group: 'org.projectlombok', name: 'lombok'
-    annotationProcessor group: 'org.projectlombok', name: 'lombok'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
-    runtimeOnly group: 'io.micrometer', name: 'micrometer-registry-prometheus'
-    runtimeOnly group: 'org.postgresql', name: 'postgresql'
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+    runtimeOnly 'org.postgresql:postgresql'
 
-    testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 dependencyManagement {
