--- a/spring-boot-main/src/main/resources/application-docker.yml
+++ b/spring-boot-main/src/main/resources/application-docker.yml
@@ -5,13 +5,13 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/training_epam
     username: postgres
-    password: 123
+    password: postgres
     driver-class-name: org.postgresql.Driver
 
 eureka:
   client:
     service-url:
-      defaultZone: http://eurekauser:eurekapassword@localhost:8761/eureka/
+      defaultZone: http://eurekauser:eurekapassword@discovery-service:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
 
