--- a/training-workload-service/build.gradle
+++ b/training-workload-service/build.gradle
@@ -2,10 +2,25 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.12'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'com.google.cloud.tools.jib' version '3.4.0'
 }
 
 group = 'com.epam.training'
 version = '0.0.1-SNAPSHOT'
+
+jib {
+	from {
+		image = 'eclipse-temurin:17-jre' // Or 21 if you're on Java 21
+	}
+	to {
+		image = 'ibragimovanvar/training-workload-service:latest'
+	}
+	container {
+		ports = ['8081']
+		mainClass = 'com.epam.training.TrainingWorkloadServiceApplication' // adjust as needed
+		jvmFlags = ['-Dspring.profiles.active=docker']
+	}
+}
 
 java {
 	toolchain {
@@ -33,8 +48,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-	testImplementation group: 'org.springframework.security', name: 'spring-security-test'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
 
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
