--- a/spring-boot-main/src/main/resources/application.yml
+++ b/spring-boot-main/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
   cloud:
     discovery:
       enabled: true
+  activemq:
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
 
 management:
   prometheus:
