--- a/training-workload-service/src/main/resources/application-docker.properties
+++ b/training-workload-service/src/main/resources/application-docker.properties
@@ -18,3 +18,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 eureka.instance.metadata-map.region=docker
+
+spring.activemq.broker-url=tcp://activemq:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
