--- a/spring-boot-main/src/main/resources/application-docker.yml
+++ b/spring-boot-main/src/main/resources/application-docker.yml
@@ -7,6 +7,10 @@ spring:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+  activemq:
+    broker-url: tcp://activemq:61616
+    user: admin
+    password: admin
 
 eureka:
   client:
