--- a/training-workload-service/src/main/resources/application.properties
+++ b/training-workload-service/src/main/resources/application.properties
@@ -16,3 +16,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 eureka.instance.metadata-map.region=localhost
+
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
