--- a/training-workload-service/build.gradle
+++ b/training-workload-service/build.gradle
@@ -13,7 +13,7 @@ jib {
 		image = 'eclipse-temurin:17-jre' // Or 21 if you're on Java 21
 	}
 	to {
-		image = 'ibragimovanvar/training-workload-service:latest'
+		image = 'ibragimovanvar/training-workload-service:1.1'
 	}
 	container {
 		ports = ['8081']
